<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- <3> -->

        <TextView
            android:id="@+id/poll_created_by"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sender_Name"
            android:textStyle="bold" />

        <!-- <4> -->

        <TextView
            android:id="@+id/poll_creation_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/mintesago" />
    </LinearLayout>

    <TextView
        android:id="@+id/poll_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Poll_Question"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />
   
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3.5" >

         <ListView
             android:id="@+id/poll_optionsview"
             android:layout_width="232dp"
             android:layout_height="match_parent"
             android:choiceMode="singleChoice"
             android:drawSelectorOnTop="false"
             android:transcriptMode="alwaysScroll" >
         </ListView>

         <ListView
             android:id="@+id/poll_resultview"
             android:layout_width="88dp"
             android:layout_height="wrap_content" >
         </ListView>

     </LinearLayout>
    
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/vote"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_vote" />
    </LinearLayout>

</LinearLayout>