<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.90"
        android:cacheColorHint="#00000000"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll" />
 
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText_message"
            android:layout_width="fill_parent"
            android:layout_height="63dp"
            android:hint="@string/hint"
            android:inputType="textMultiLine|textNoSuggestions" />

    </LinearLayout>
    
   <LinearLayout
        android:id="@+id/footer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/createPoll"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_createPoll" />

        <Button
            android:id="@+id/createTweet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_createTweet" />
        
          <Button
              android:id="@+id/imageSharing"
              style="?android:attr/buttonBarButtonStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/b_imageoptions" />

    </LinearLayout>
</LinearLayout>