<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <2> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- <3> -->

        <TextView
            android:id="@+id/textUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Slashdot"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/textType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Slashdot"
            android:textStyle="italic"
             />

        <!-- <4> -->

        <TextView
            android:id="@+id/textCreatedAt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/mintesago" />
    </LinearLayout>

    <!-- <5> -->

    <TextView
        android:id="@+id/textText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Firefox" />

</LinearLayout>